[fix] Remove whitespace below Images

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -41,6 +41,10 @@
   margin-top: 2.5rem;
 }
 
+.img_container {
+  font-size: 0;
+}
+
 @media (min-width: 1024px) {
   .root {
     display: grid;
